--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
       href="{{ site_config.base_url }}/assets/css/style.css"
     />
+    <!-- Favicon links -->
+    <link rel="icon" type="image/x-icon" href="{{ site_config.base_url }}/assets/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site_config.base_url }}/assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site_config.base_url }}/assets/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="{{ site_config.base_url }}/assets/favicon/favicon-48x48.png" />
+    <link rel="apple-touch-icon" href="{{ site_config.base_url }}/assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ site_config.base_url }}/assets/favicon/favicon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="{{ site_config.base_url }}/assets/favicon/favicon-512x512.png" />
+    <!-- End favicon links -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script>
       window.MathJax = {
