--- a/web/templates/problem.html
+++ b/web/templates/problem.html
@@ -1,22 +1,17 @@
-{% extends "base.html" %}
-
-{% block title %}{{ problem.title }} | {{ site_config.title }}{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}{{ problem.title }} | {{
+site_config.title }}{% endblock %} {% block content %}
 <div class="problem-page">
   <div class="problem-navigation">
     <a href="{{ site_config.base_url }}/" class="home-link">← Home</a>
     <h1>Problem {{ problem.number }}: {{ problem.title }}</h1>
     <div class="nav-buttons">
-      {% if prev_problem %}      
+      {% if prev_problem %}
       <a
         href="{{ site_config.base_url }}/problems/problem-{{ prev_problem.number }}/"
         class="nav-button prev-button"
         >← Previous</a
       >
-      {% endif %}
-      
-      {% if next_problem %}
+      {% endif %} {% if next_problem %}
       <a
         href="{{ site_config.base_url }}/problems/problem-{{ next_problem.number }}/"
         class="nav-button next-button"
@@ -33,8 +28,19 @@
 
   <div class="problem-solution">
     <h2>Solution</h2>
-    <div class="code-container">
-      {{ highlighted_code | safe }}
+    <div class="code-container">{{ highlighted_code | safe }}</div>
+
+    <div class="code-execution">
+      <button
+        class="run-code-btn"
+        data-code="{{ executable_code | e }}"
+        data-output="output-{{ problem.number }}"
+        onclick="runPythonCodeFromButton(this)"
+        disabled
+      >
+        Loading Python...
+      </button>
+      <div id="output-{{ problem.number }}" class="code-output"></div>
     </div>
   </div>
 </div>
